# muEDM_Entrance

./: .gitignore  .rootrc  CMakeLists.txt  entrance.cc  pre_analysis_VD.cpp  rootlogon.C  run-loop.mac  run-mt.mac  run-mtloop.mac  sum_files.cpp
analysis/: SiPM_Waveform.cc  SiPM_Waveform_gate.cc  analysis_VD.cpp  analysis_beam.cpp  analysis_cross.cpp  analysis_gate.cpp  analysis_telescope.cpp
inc/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  Physics.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh  ScintHit.hh  ScintSD.hh  VirtualDetectorSD.hh
mac/: run-loop_125.mac  run-loop_28.mac  run.mac  run_125.mac  run_28.mac  thickness_125.loop  thickness_28.loop  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  Physics.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc  ScintHit.cc  ScintSD.cc  VirtualDetectorSD.cc
